gopost_app/native/gopost_video_engine/include/gopost/video_engine.h

/* --- Timeline & track types (S8-02) --- */

typedef struct GopostTimeline GopostTimeline;
typedef enum {
    GOPOST_TRACK_VIDEO  = 0,
    GOPOST_TRACK_AUDIO  = 1,
    GOPOST_TRACK_TITLE  = 2,
    GOPOST_TRACK_EFFECT = 3,
    GOPOST_TRACK_SUBTITLE = 4,
} GopostTrackType;
/** Timeline config: frame rate, dimensions, color space. */
typedef struct {
    double frame_rate;       /* e.g. 30.0, 29.97 */
    int32_t width;
    int32_t height;
    int32_t color_space;     /* 0 = sRGB, 1 = Display P3, 2 = Adobe RGB */
} GopostTimelineConfig;
/** In/out range on timeline (in seconds). */
typedef struct {
    double in_time;   /* start on timeline */
    double out_time;  /* end on timeline */
} GopostTimelineRange;
/** Source in/out (which part of source media is used). */
typedef struct {
    double source_in;   /* start in source (seconds) */
    double source_out;  /* end in source (seconds) */
} GopostSourceRange;
/** Clip descriptor for add_clip. */
typedef struct {
    int32_t track_index;           /* index of track */
    GopostClipSourceType source_type;
    char source_path[1024];        /* file path (video/image) or empty for title/color */
    GopostTimelineRange timeline_range;
    GopostSourceRange source_range;
    double speed;                  /* 1.0 = normal */
    float opacity;                 /* 0.0 - 1.0 */
    int32_t blend_mode;            /* 0 = Normal, 1 = Multiply, 2 = Screen, 3 = Overlay, 4 = Add */
    uint32_t effect_hash;         /* for cache key; 0 = no effects */
} GopostClipDescriptor;
/** Timeline lifecycle (S8-02, S8-05) --- */

GopostError gopost_timeline_create(
    GopostEngine* engine,
    const GopostTimelineConfig* config,
    GopostTimeline** out_timeline);
void gopost_timeline_destroy(GopostTimeline* timeline);
GopostError gopost_timeline_get_config(
    const GopostTimeline* timeline,
    GopostTimelineConfig* out_config);
/** Total duration in seconds. */
GopostError gopost_timeline_get_duration(
    const GopostTimeline* timeline,
    double* out_duration_seconds);
/** Track operations --- */

GopostError gopost_timeline_add_track(
    GopostTimeline* timeline,
    GopostTrackType type,
    int32_t* out_track_index);
GopostError gopost_timeline_remove_track(
    GopostTimeline* timeline,
    int32_t track_index);
GopostError gopost_timeline_get_track_count(
    const GopostTimeline* timeline,
    int32_t* out_count);
/** Clip operations --- */

GopostError gopost_timeline_add_clip(
    GopostTimeline* timeline,
    const GopostClipDescriptor* descriptor,
    int32_t* out_clip_id);
GopostError gopost_timeline_remove_clip(
    GopostTimeline* timeline,
    int32_t clip_id);
GopostError gopost_timeline_trim_clip(
    GopostTimeline* timeline,
    int32_t clip_id,
    const GopostTimelineRange* new_range,
    const GopostSourceRange* new_source);
GopostError gopost_timeline_move_clip(
    GopostTimeline* timeline,
    int32_t clip_id,
    int32_t new_track_index,
    double new_in_time);
/** Split clip at split_time_seconds (must be between clip in and out). Returns new clip id or negative on failure. */
GopostError gopost_timeline_split_clip(
    GopostTimeline* timeline,
    int32_t clip_id,
    double split_time_seconds,
    int32_t* out_new_clip_id);
/** Ripple delete: remove clips on track in [range_start, range_end] and shift later clips left. */
GopostError gopost_timeline_ripple_delete(
    GopostTimeline* timeline,
    int32_t track_index,
    double range_start_seconds,
    double range_end_seconds);
/** Playback & render (S8-03, S8-04, S8-05) --- */

/** Seek playhead to position (seconds). */
GopostError gopost_timeline_seek(
    GopostTimeline* timeline,
    double position_seconds);
/** Render frame at current playhead into a frame from engine's pool. Caller must release with gopost_frame_release. */
GopostError gopost_timeline_render_frame(
    GopostTimeline* timeline,
    GopostFrame** out_frame);
/** Get current playhead position (seconds). */
GopostError gopost_timeline_get_position(
    const GopostTimeline* timeline,
    double* out_position_seconds);
/** Frame cache control (S8-09). Optional: set max cache size in bytes (0 = use engine default). */
GopostError gopost_timeline_set_frame_cache_size_bytes(
    GopostTimeline* timeline,
    size_t max_bytes);
GopostError gopost_timeline_invalidate_frame_cache(GopostTimeline* timeline);
/* --- Media probe (S8-01) --- */

typedef struct {
    double duration_seconds;
    int32_t width;
    int32_t height;
    double frame_rate;
    int64_t frame_count;
    int32_t has_audio;       /* 0 = no, 1 = yes */
    int32_t audio_sample_rate;
    int32_t audio_channels;
    double audio_duration_seconds;
} GopostMediaInfo;
/** Probe a media file for duration, dimensions, frame rate, and audio info. */
GopostError gopost_media_probe(
    const char* path,
    GopostMediaInfo* out_info);
/* --- Audio (S8-10) --- */

/** Set per-clip volume (0.0 = mute, 1.0 = normal, 2.0 = max boost). */
GopostError gopost_timeline_set_clip_volume(
    GopostTimeline* timeline,
    int32_t clip_id,
    float volume);
GopostError gopost_timeline_get_clip_volume(
    GopostTimeline* timeline,
    int32_t clip_id,
    float* out_volume);
/**
 * Render mixed audio at current playhead into interleaved float32 PCM buffer.
 * `buffer` must hold at least num_frames * num_channels floats.
 * Returns GOPOST_OK on success.
 */
GopostError gopost_timeline_render_audio(
    GopostTimeline* timeline,
    float* buffer,
    int32_t num_frames,
    int32_t num_channels,
    int32_t sample_rate);
/* --- Transitions (S10-03) --- */

GopostError gopost_timeline_set_clip_transition_in(
    GopostTimeline* timeline,
    int32_t clip_id,
    int32_t transition_type,
    double duration_seconds,
    int32_t easing_curve);
GopostError gopost_timeline_set_clip_transition_out(
    GopostTimeline* timeline,
    int32_t clip_id,
    int32_t transition_type,
    double duration_seconds,
    int32_t easing_curve);
/* --- Keyframes (S10-04) --- */

GopostError gopost_timeline_set_clip_keyframe(
    GopostTimeline* timeline,
    int32_t clip_id,
    int32_t property,
    double time,
    double value,
    int32_t interpolation);
GopostError gopost_timeline_remove_clip_keyframe(
    GopostTimeline* timeline,
    int32_t clip_id,
    int32_t property,
    double time);
GopostError gopost_timeline_clear_clip_keyframes(
    GopostTimeline* timeline,
    int32_t clip_id,
    int32_t property);
/* --- Effects (S10-01, S10-02) --- */

/** Set color grading parameters for a clip (10 floats). */
GopostError gopost_timeline_set_clip_color_grading(
    GopostTimeline* timeline,
    int32_t clip_id,
    float brightness, float contrast, float saturation, float exposure,
    float temperature, float tint, float highlights, float shadows,
    float vibrance, float hue);
/** Clear all effects and color grading from a clip. */
GopostError gopost_timeline_clear_clip_effects(
    GopostTimeline* timeline,
    int32_t clip_id);
/* --- Audio (S10-05 enhancements) --- */

GopostError gopost_timeline_set_clip_pan(
    GopostTimeline* timeline, int32_t clip_id, float pan);
GopostError gopost_timeline_set_clip_fade_in(
    GopostTimeline* timeline, int32_t clip_id, float seconds);
GopostError gopost_timeline_set_clip_fade_out(
    GopostTimeline* timeline, int32_t clip_id, float seconds);