gopost_app/lib/rendering_bridge/ffi/native_bindings.dart


  late final gopost_image_decode = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Uint8>, Uint64, Pointer<Pointer<Void>>),
      int Function(Pointer<Void>, Pointer<Uint8>, int, Pointer<Pointer<Void>>)>(
    'gopost_image_decode',
  );

  late final gopost_image_decode_resize = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Uint8>, Uint64, Int32, Int32, Pointer<Pointer<Void>>),
      int Function(Pointer<Void>, Pointer<Uint8>, int, int, int, Pointer<Pointer<Void>>)>(
    'gopost_image_decode_resize',
  );

  late final gopost_image_decode_file = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Utf8>, Pointer<Pointer<Void>>),
      int Function(Pointer<Void>, Pointer<Utf8>, Pointer<Pointer<Void>>)>(
    'gopost_image_decode_file',
  );

  late final gopost_image_encode_jpeg = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostJpegOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>),
      int Function(Pointer<Void>, Pointer<NativeGopostJpegOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>)>(
    'gopost_image_encode_jpeg',
  );

  late final gopost_image_encode_png = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostPngOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>),
      int Function(Pointer<Void>, Pointer<NativeGopostPngOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>)>(
    'gopost_image_encode_png',
  );

  late final gopost_image_encode_webp = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostWebpOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>),
      int Function(Pointer<Void>, Pointer<NativeGopostWebpOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>)>(
    'gopost_image_encode_webp',
  );

  late final gopost_image_encode_heic = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostHeicOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>),
      int Function(Pointer<Void>, Pointer<NativeGopostHeicOpts>, Pointer<Pointer<Uint8>>, Pointer<Uint64>)>(
    'gopost_image_encode_heic',
  );

  late final gopost_image_encode_bmp = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Pointer<Uint8>>, Pointer<Uint64>),
      int Function(Pointer<Void>, Pointer<Pointer<Uint8>>, Pointer<Uint64>)>(
    'gopost_image_encode_bmp',
  );

  late final gopost_image_encode_to_file = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Utf8>, Int32, Int32),
      int Function(Pointer<Void>, Pointer<Utf8>, int, int)>(
    'gopost_image_encode_to_file',
  );

  late final gopost_image_encode_free = _lib.lookupFunction<
      Void Function(Pointer<Uint8>),
      void Function(Pointer<Uint8>)>(
    'gopost_image_encode_free',
  );

  // --- Export (export.h) ---

  late final gopost_export_to_buffer = _lib.lookupFunction<
      Int32 Function(
        Pointer<Void>,
        Pointer<NativeGopostExportConfig>,
        Pointer<Void>,
        Pointer<Void>,
        Pointer<Pointer<Uint8>>,
        Pointer<Uint64>,
      ),
      int Function(
        Pointer<Void>,
        Pointer<NativeGopostExportConfig>,
        Pointer<Void>,
        Pointer<Void>,
        Pointer<Pointer<Uint8>>,
        Pointer<Uint64>,
      )>(
    'gopost_export_to_buffer',
  );

  late final gopost_export_to_file = _lib.lookupFunction<
      Int32 Function(
        Pointer<Void>,
        Pointer<NativeGopostExportConfig>,
        Pointer<Utf8>,
        Pointer<Void>,
        Pointer<Void>,
      ),
      int Function(
        Pointer<Void>,
        Pointer<NativeGopostExportConfig>,
        Pointer<Utf8>,
        Pointer<Void>,
        Pointer<Void>,
      )>(
    'gopost_export_to_file',
  );

  late final gopost_export_estimate_size = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostExportConfig>, Pointer<Uint64>),
      int Function(Pointer<Void>, Pointer<NativeGopostExportConfig>, Pointer<Uint64>)>(
    'gopost_export_estimate_size',
  );

  late final gopost_export_free = _lib.lookupFunction<
      Void Function(Pointer<Uint8>),
      void Function(Pointer<Uint8>)>(
    'gopost_export_free',
  );

  // --- Video timeline (video_engine.h) ---

  late final gopost_timeline_create = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostTimelineConfig>, Pointer<Pointer<Void>>),
      int Function(Pointer<Void>, Pointer<NativeGopostTimelineConfig>, Pointer<Pointer<Void>>)>(
    'gopost_timeline_create',
  );

  late final gopost_timeline_destroy = _lib.lookupFunction<
      Void Function(Pointer<Void>),
      void Function(Pointer<Void>)>(
    'gopost_timeline_destroy',
  );

  late final gopost_timeline_get_config = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostTimelineConfig>),
      int Function(Pointer<Void>, Pointer<NativeGopostTimelineConfig>)>(
    'gopost_timeline_get_config',
  );

  late final gopost_timeline_get_duration = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Double>),
      int Function(Pointer<Void>, Pointer<Double>)>(
    'gopost_timeline_get_duration',
  );

  late final gopost_timeline_add_track = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Pointer<Int32>),
      int Function(Pointer<Void>, int, Pointer<Int32>)>(
    'gopost_timeline_add_track',
  );

  late final gopost_timeline_remove_track = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32),
      int Function(Pointer<Void>, int)>(
    'gopost_timeline_remove_track',
  );

  late final gopost_timeline_get_track_count = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Int32>),
      int Function(Pointer<Void>, Pointer<Int32>)>(
    'gopost_timeline_get_track_count',
  );

  late final gopost_timeline_add_clip = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<NativeGopostClipDescriptor>, Pointer<Int32>),
      int Function(Pointer<Void>, Pointer<NativeGopostClipDescriptor>, Pointer<Int32>)>(
    'gopost_timeline_add_clip',
  );

  late final gopost_timeline_remove_clip = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32),
      int Function(Pointer<Void>, int)>(
    'gopost_timeline_remove_clip',
  );

  late final gopost_timeline_trim_clip = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Pointer<NativeGopostTimelineRange>, Pointer<NativeGopostSourceRange>),
      int Function(Pointer<Void>, int, Pointer<NativeGopostTimelineRange>, Pointer<NativeGopostSourceRange>)>(
    'gopost_timeline_trim_clip',
  );

  late final gopost_timeline_move_clip = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Int32, Double),
      int Function(Pointer<Void>, int, int, double)>(
    'gopost_timeline_move_clip',
  );

  late final gopost_timeline_split_clip = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Double, Pointer<Int32>),
      int Function(Pointer<Void>, int, double, Pointer<Int32>)>(
    'gopost_timeline_split_clip',
  );

  late final gopost_timeline_ripple_delete = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Double, Double),
      int Function(Pointer<Void>, int, double, double)>(
    'gopost_timeline_ripple_delete',
  );

  late final gopost_timeline_seek = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Double),
      int Function(Pointer<Void>, double)>(
    'gopost_timeline_seek',
  );

  late final gopost_timeline_render_frame = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Pointer<Void>>),
      int Function(Pointer<Void>, Pointer<Pointer<Void>>)>(
    'gopost_timeline_render_frame',
  );

  late final gopost_timeline_get_position = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Double>),
      int Function(Pointer<Void>, Pointer<Double>)>(
    'gopost_timeline_get_position',
  );

  late final gopost_timeline_set_frame_cache_size_bytes = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Uint64),
      int Function(Pointer<Void>, int)>(
    'gopost_timeline_set_frame_cache_size_bytes',
  );

  late final gopost_timeline_invalidate_frame_cache = _lib.lookupFunction<
      Int32 Function(Pointer<Void>),
      int Function(Pointer<Void>)>(
    'gopost_timeline_invalidate_frame_cache',
  );

  // --- Media probe (video_engine.h S8-01) ---

  late final gopost_media_probe = _lib.lookupFunction<
      Int32 Function(Pointer<Utf8>, Pointer<NativeGopostMediaInfo>),
      int Function(Pointer<Utf8>, Pointer<NativeGopostMediaInfo>)>(
    'gopost_media_probe',
  );

  // --- Audio (video_engine.h S8-10) ---

  late final gopost_timeline_set_clip_volume = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Float),
      int Function(Pointer<Void>, int, double)>(
    'gopost_timeline_set_clip_volume',
  );

  late final gopost_timeline_get_clip_volume = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Pointer<Float>),
      int Function(Pointer<Void>, int, Pointer<Float>)>(
    'gopost_timeline_get_clip_volume',
  );

  late final gopost_timeline_render_audio = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Pointer<Float>, Int32, Int32, Int32),
      int Function(Pointer<Void>, Pointer<Float>, int, int, int)>(
    'gopost_timeline_render_audio',
  );

  // --- Transitions (S10-03) ---

  late final gopost_timeline_set_clip_transition_in = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Int32, Double, Int32),
      int Function(Pointer<Void>, int, int, double, int)>(
    'gopost_timeline_set_clip_transition_in',
  );

  late final gopost_timeline_set_clip_transition_out = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Int32, Double, Int32),
      int Function(Pointer<Void>, int, int, double, int)>(
    'gopost_timeline_set_clip_transition_out',
  );

  // --- Keyframes (S10-04) ---

  late final gopost_timeline_set_clip_keyframe = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Int32, Double, Double, Int32),
      int Function(Pointer<Void>, int, int, double, double, int)>(
    'gopost_timeline_set_clip_keyframe',
  );

  late final gopost_timeline_remove_clip_keyframe = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Int32, Double),
      int Function(Pointer<Void>, int, int, double)>(
    'gopost_timeline_remove_clip_keyframe',
  );

  late final gopost_timeline_clear_clip_keyframes = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Int32),
      int Function(Pointer<Void>, int, int)>(
    'gopost_timeline_clear_clip_keyframes',
  );

  // --- Effects (S10-01, S10-02) ---

  late final gopost_timeline_set_clip_color_grading = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32,
          Float, Float, Float, Float, Float, Float, Float, Float, Float, Float),
      int Function(Pointer<Void>, int,
          double, double, double, double, double, double, double, double, double, double)>(
    'gopost_timeline_set_clip_color_grading',
  );

  late final gopost_timeline_clear_clip_effects = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32),
      int Function(Pointer<Void>, int)>(
    'gopost_timeline_clear_clip_effects',
  );

  // --- Audio enhancements (S10-05) ---

  late final gopost_timeline_set_clip_pan = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Float),
      int Function(Pointer<Void>, int, double)>(
    'gopost_timeline_set_clip_pan',
  );

  late final gopost_timeline_set_clip_fade_in = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Float),
      int Function(Pointer<Void>, int, double)>(
    'gopost_timeline_set_clip_fade_in',
  );

  late final gopost_timeline_set_clip_fade_out = _lib.lookupFunction<
      Int32 Function(Pointer<Void>, Int32, Float),
      int Function(Pointer<Void>, int, double)>(
    'gopost_timeline_set_clip_fade_out',
  );
